--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> poop </title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <h1> hello </h1>
+        <p> hi </p>
+        <p>will code for pokemon</p>
+        <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
 </html>
