--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css"/>
+        <title>Daniel Ho</title>
     </head>
     <body>
-        <h1> hello </h1>
+        <h1> Daniel Ho </h1>
         <p> hi </p>
         <p>will code for pokemon</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
