--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css"/>
-        <title>Daniel Ho</title>
+        <title>Projects</title>
     </head>
     <body>
         <h1> Daniel Ho </h1>
-        <p> hi </p>
+        <h2> Previous Projects</h2>
+        <a href="donutdaniel.github.io/SampleAssignment">Sample</a><br>
+        <a href="donutdaniel.github.io/OriginalDesign">OriginalDesign</a><br>
+        <a href="donutdaniel.github.io/Lightning">Lightning</a>
+        <a href="donutdaniel.github.io/AsteroidsGame">Asteroids Game</a><br>
+        <a href="donutdaniel.github.io/"></a>
+        <a href="donutdaniel.github.io/"></a>
         <p>will code for pokemon</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
