--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <body>
         <h1> Daniel Ho </h1>
         <h2> Previous Projects</h2>
-        <a href="donutdaniel.github.io/SampleAssignment">Sample</a><br>
-        <a href="donutdaniel.github.io/OriginalDesign">Original Design</a><br>
-        <a href="donutdaniel.github.io/Lightning">Lightning</a><br>
-        <a href="donutdaniel.github.io/Dice">Dice</a><br>
-        <a href="donutdaniel.github.io/Chemotaxis">Chemotaxis</a><br>
-        <a href="donutdaniel.github.io/Snowflake Catcher">Snowflake Catcher</a><br>
-        <a href="donutdaniel.github.io/Starfield">Starfield</a><br>
-        <a href="donutdaniel.github.io/AsteroidsGame">Asteroids Game</a><br>
-        <a href="donutdaniel.github.io/SierpinskiTriangle">Sierpinski Triangle</a><br>
-        <a href="donutdaniel.github.io/OriginalFractal">Original Fractal</a><br>
-        <a href="donutdaniel.github.io/Minesweeper">Minesweeper</a><br>
-        <a href="youtube.com">youtube</a>
+        <a href="SampleAssignment">Sample</a><br>
+        <a href="OriginalDesign">Original Design</a><br>
+        <a href="Lightning">Lightning</a><br>
+        <a href="Dice">Dice</a><br>
+        <a href="Chemotaxis">Chemotaxis</a><br>
+        <a href="Snowflake Catcher">Snowflake Catcher</a><br>
+        <a href="Starfield">Starfield</a><br>
+        <a href="AsteroidsGame">Asteroids Game</a><br>
+        <a href="SierpinskiTriangle">Sierpinski Triangle</a><br>
+        <a href="OriginalFractal">Original Fractal</a><br>
+        <a href="Minesweeper">Minesweeper</a><br>
+        <a href="https:youtube.com">youtube</a>
         <p>will code for pokemon</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
