--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="SierpinskiTriangle">Sierpinski Triangle</a><br>
         <a href="OriginalFractal">Original Fractal</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
-        <a href="https://youtube.com">youtube</a>
+        <a href="https://www.youtube.com">youtube</a>
         <p>will code for pokemon</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
