--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script type="text/javascript" src="jquery.interactive_bg.js"></script>
         <link rel="stylesheet" href="styles.css"/>
         <title>Projects</title>
     </head>
@@ -18,8 +20,8 @@
         <a href="SierpinskiTriangle">Sierpinski Triangle</a><br>
         <a href="OriginalFractal">Original Fractal</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
-        <a href="https://www.youtube.com">youtube</a>
-        <p>will code for pokemon</p>
+        <p>Made by Daniel Ho</p>
+        <div class="bg" data-ibg-bg="bg.jpg"></div>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
 </html>
