--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script type="text/javascript" src="jquery.interactive_bg.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <link rel="stylesheet" href="styles.css"/>
         <title>Projects</title>
     </head>
@@ -21,7 +20,8 @@
         <a href="OriginalFractal">Original Fractal</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
         <p>Made by Daniel Ho</p>
-        <div class="bg" data-ibg-bg="bg.jpg"></div>
+        
+        <div id="gradient" />
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
 </html>
