--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <link rel="stylesheet" href="styles.css"/>
+        <script src="gradient.js"></script>
         <title>Projects</title>
     </head>
     <body>
@@ -20,6 +21,7 @@
         <a href="OriginalFractal">Original Fractal</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
         <p>Made by Daniel Ho</p>
+        
         
         <div id="gradient" />
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
