--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="gradient.js"></script>
         <title>Projects</title>
     </head>
-    <body>
+    <body id="gradient">
         <h1> Daniel Ho </h1>
         <h2> Previous Projects</h2>
         <a href="SampleAssignment">Sample</a><br>
@@ -21,9 +21,6 @@
         <a href="OriginalFractal">Original Fractal</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
         <p>Made by Daniel Ho</p>
-        
-        
-        <div id="gradient" />
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
 </html>
