--- a/that_was_easy/index.html
+++ b/that_was_easy/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <button id="Easy">Easy</button>
+        <button id="button">drop the beat</button>
         <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
         <script src="main.js"></script>
     </body>
