--- a/button_game/index.html
+++ b/button_game/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
     <head>
-        <title>Circle Game</title>
+        <link rel="stylesheet" href="styles.css">
+        <title>Donuts Game</title>
     </head>
     <body>
-        <h1>circle game</h1>
+        <h1>Get your donuts!</h1>
+        <text>donuts:</text>
+        <div id="count"><br>
+        <button id="donut"><img src="pinkdonut.png" width="200p" height="200" ></button>
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
