--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <a href="SierpinskiTriangle">Sierpinski Triangle</a><br>
         <a href="OriginalFractal">Original Fractal</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
+        <h3>Summer 2016</h3>
+        <a href="that_was_easy">That Was Easy</a><br>
+        <a href="button_game">Button Game</a><br>
+        <a href="geometric_pattern">Geometric Pattern</a><br>
+        <a href="dodge">Dodge</a><br>
         <p>Made by Daniel Ho</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
