--- a/collaborative_sketch/index.html
+++ b/collaborative_sketch/index.html
@@ -7,9 +7,10 @@
 <body>
     <div id="controls">
         <button id="saveDrawing">Save to Computer</button>
-        <button id="clearDrawing">DELETE DRAWING</button>
+        <button id="clearDrawing">CLEAR</button>
         <button id="dots">Dots</button>
         <button id="line">Line</button>
+        <button id="animate">Animate</button>
     </div>
     <script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
     <script>
