--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="dodge_or_die">Dodge or Die</a><br>
         <a href="explosions">Explosions</a><br>
         <a href="collaborative_sketch">Collaborative Sketch</a><br>
+        <a href="magoose_game">Magoose Game</a><br>
         <p>Made by Daniel Ho</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
