--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <a href="Lightning">Lightning</a><br>
         <a href="Dice">Dice</a><br>
         <a href="Chemotaxis">Chemotaxis</a><br>
-        <a href="Snowflake Catcher">Snowflake Catcher</a><br>
+        <a href="SnowflakeCatcher">Snowflake Catcher</a><br>
         <a href="Starfield">Starfield</a><br>
         <a href="AsteroidsGame">Asteroids Game</a><br>
         <a href="SierpinskiTriangle">Sierpinski Triangle</a><br>
         <a href="OriginalFractal">Original Fractal</a><br>
+        <a href="FractalTree">Fractal Tree</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
         <h3>Summer 2016</h3>
         <a href="that_was_easy">That Was Easy</a><br>
@@ -29,6 +30,9 @@
         <a href="explosions">Explosions</a><br>
         <a href="collaborative_sketch">Collaborative Sketch</a><br>
         <a href="magoose_game">Magoose Game</a><br>
+        <h4>Fall 2016</h4>
+        <a href="pepe">Tribute to Pepe</a><br>
+        <a href="QuoteGenerator">Quote Generator</a><br>
         <p>Made by Daniel Ho</p>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
