--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <h4>Fall 2016</h4>
         <a href="pepe">Tribute to Pepe</a><br>
         <a href="QuoteGenerator">Quote Generator</a><br>
-        <p>Made by Daniel Ho</p>
+        <p>Made by Daniel Ho</p><br>
+        <a href="https://www.linkedin.com/in/danielho54/">LinkedIn</a><br>
         <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
 </html>
