updated new p5, old ones broken

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="pepe">Tribute to Pepe</a><br>
         <a href="QuoteGenerator">Quote Generator</a><br>
         <p>Made by Daniel Ho</p><br>
+        <a href="https://github.com/donutdaniel">Github</a><br>
         <a href="https://www.linkedin.com/in/danielho54/">LinkedIn</a><br>
-        <img src="http://www.dunkindonuts.com/content/dunkindonuts/en/menu/food/bakery/donuts/donuts/_jcr_content/block/image.img.png/1415193587324.png">
     </body>
 </html>
