--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <link rel="stylesheet" href="styles.css"/>
-        <script src="gradient.js"></script>
+        <script src="js/gradient.js"></script>
         <title>Projects</title>
     </head>
     <body id="gradient">
@@ -22,17 +22,17 @@
         <a href="FractalTree">Fractal Tree</a><br>
         <a href="Minesweeper">Minesweeper</a><br>
         <h3>Summer 2016</h3>
-        <a href="that_was_easy">That Was Easy</a><br>
-        <a href="button_game">Button Game</a><br>
-        <a href="geometric_pattern">Geometric Pattern</a><br>
-        <a href="dodge">Dodge</a><br>
-        <a href="dodge_or_die">Dodge or Die</a><br>
-        <a href="explosions">Explosions</a><br>
-        <a href="collaborative_sketch">Collaborative Sketch</a><br>
-        <a href="magoose_game">Magoose Game</a><br>
+        <a href="S16/that_was_easy">That Was Easy</a><br>
+        <a href="S16/button_game">Button Game</a><br>
+        <a href="S16/geometric_pattern">Geometric Pattern</a><br>
+        <a href="S16/dodge">Dodge</a><br>
+        <a href="S16/dodge_or_die">Dodge or Die</a><br>
+        <a href="S16/explosions">Explosions</a><br>
+        <a href="S16/collaborative_sketch">Collaborative Sketch</a><br>
         <h4>Fall 2016</h4>
-        <a href="pepe">Tribute to Pepe</a><br>
-        <a href="QuoteGenerator">Quote Generator</a><br>
+        <a href="F16/magoose_game">Magoose Game</a><br>
+        <a href="F16/pepe">Tribute to Pepe</a><br>
+        <a href="F16/QuoteGenerator">Quote Generator</a><br>
         <p>Made by Daniel Ho</p><br>
         <a href="https://github.com/donutdaniel">Github</a><br>
         <a href="https://www.linkedin.com/in/danielho54/">LinkedIn</a><br>
