--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h4>Fall 2016</h4>
         <a href="F16/magoose_game">Magoose Game</a><br>
         <a href="F16/pepe">Tribute to Pepe</a><br>
-        <a href="F16/QuoteGenerator">Quote Generator</a><br>
+        <a href="F16/quote_generator">Quote Generator</a><br>
         <p>Made by Daniel Ho</p><br>
         <a href="https://github.com/donutdaniel">Github</a><br>
         <a href="https://www.linkedin.com/in/danielho54/">LinkedIn</a><br>
