--- a/F16/magoose_game/index.html
+++ b/F16/magoose_game/index.html
@@ -7,5 +7,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.9/p5.js"></script>
         <script src="https://cdn.rawgit.com/molleindustria/p5.play/master/lib/p5.play.js"></script>
         <script src="main.js"></script>
+        <p>WASD to move. Space to shoot. Eat items to gain projectiles. Total 3 evolutions.</p>
     </body>
 </html>
