--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Projects</title>
     </head>
     <body id="gradient">
-        <h1>sDaniel Ho</h1>
+        <h1>Daniel Ho</h1>
         <h2> Previous Projects</h2>
         <a href="SampleAssignment">Sample</a><br>
         <a href="OriginalDesign">Original Design</a><br>
