--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -9,57 +9,99 @@
   <!-- Font Awesome -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-  <!-- CSS -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
 
   
 </head>
 
-<body>
+<!-- data-spy and data-target for Bootstrap scrollspy -->
+<body id="page-top" data-spy="scroll" data-target="#main-nav">
+
   <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+  <nav id="main-nav" class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
       <!-- For Mobile Display, Adds Menu Button -->
       <div class ="navbar-header page-scroll">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
-          <span class="sr-only">Toggle Navigation</span> Menu <span class="fa fa-bars"></span>
+          <span class="sr-only">Toggle Navigation</span> Menu <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand page-scroll" href="#page-first">Daniel Ho</a>
+        <a class="navbar-brand page-scroll" href="#page-top">Daniel Ho</a>
       </div>
 
       <!-- Buttons for Scrolling -->
       <div class="collapse navbar-collapse" id="navbar-collapse-id">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active hidden"><a href="#page-first"></a></li>
-          <li><a class="page-scroll" href="#page-first">About</a></li>
-          <li><a class="page-scroll" href="#page-second">Portfolio</a></li>
-          <li><a class="page-scroll" href="#page-third">Contact</a></li>
+          <li class="hidden"><a href="#page-top"></a></li>
+          <li><a class="page-scroll" href="#page-about">About</a></li>
+          <li><a class="page-scroll" href="#page-projects">Portfolio</a></li>
+          <li><a class="page-scroll" href="#page-contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="page row container-fluid" id="page-first">
-    <div class="row">
-      <div class="col-md-3">
-      </div>
-      <div class="col-md-6 text-center">
-        <br><br>
-        <h1>Daniel Ho</h1>
-      </div>
-      <div class="col-md-3">
+  <!-- Intro Page -->
+  <header id="page-intro" class="page">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="intro-lead-in">Daniel Ho</div>
+            <div class="intro-heading">Nice To Meet You!</div>
+            <a href="#page-about" class="page-scroll btn btn-default">See More</a>
+        </div>
+    </div>
+  </header>
+
+  <!-- Section 1: About -->
+  <section id="page-about" class="page">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="section-heading">About</h1>
+          <h2 class="section-subheading text-muted">Hello</h2>
+        </div>
       </div>
     </div>
+  </section>
+
+  <!-- Section 2: Projects -->
+  <section id="page-projects" class="page">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="section-heading">Projects</h1>
+          <h2 class="section-subheading text-muted">Hello</h2>
+        </div>
+      </div>
     </div>
-    <div class="page row container-fluid" id="page-second">
-      sdfsd
+  </section>
+
+  <!-- Section 3: Contact -->
+  <section id="page-contact" class="page">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="section-heading">Contact</h1>
+          <h2 class="section-subheading text-muted">Hello</h2>
+        </div>
+      </div>
     </div>
-    <div class="page row container-fluid" id="page-third">
-      sdfsdf
-  </div>
+  </section>
+
 </body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-    <script src="js/main.js"></script>
 
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <!-- Bootstrap JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+  crossorigin="anonymous"></script>
+  <!-- jQuery Easing -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <!-- Custom JS -->
+  <script src="js/main.js"></script>
+  <script src="js/nav_scroll.js"></script>
 </html>
