navbar fix and into page

--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -12,7 +12,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  
+    <script src="js/gradient.js"></script>
 </head>
 
 <!-- data-spy and data-target for Bootstrap scrollspy -->
@@ -34,7 +34,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="hidden"><a href="#page-top"></a></li>
           <li><a class="page-scroll" href="#page-about">About</a></li>
-          <li><a class="page-scroll" href="#page-projects">Portfolio</a></li>
+          <li><a class="page-scroll" href="#page-projects">Projects</a></li>
           <li><a class="page-scroll" href="#page-contact">Contact</a></li>
         </ul>
       </div>
@@ -42,11 +42,11 @@
   </nav>
 
   <!-- Intro Page -->
-  <header id="page-intro" class="page">
+  <header id="gradient" class="page page-intro">
     <div class="container-fluid">
-        <div class="row">
-            <div class="intro-lead-in">Daniel Ho</div>
-            <div class="intro-heading">Nice To Meet You!</div>
+        <div id="row">
+            <div id="intro-title">Daniel Ho</div><br>
+            <div id="intro-heading">Welcome to my Personal Website!</div><br>
             <a href="#page-about" class="page-scroll btn btn-default">See More</a>
         </div>
     </div>
