--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Personal Website">
+  <meta name="author" content="Daniel Ho">
+
   <title>Daniel Ho</title>
   
   <!-- Bootstrap --> 
@@ -45,9 +49,11 @@
   <header id="gradient" class="page page-intro">
     <div class="container-fluid">
         <div id="row">
+          <div class="col-md-12">
             <div id="intro-title">Daniel Ho</div><br>
             <div id="intro-heading">Welcome to my Personal Website!</div><br>
             <a href="#page-about" class="page-scroll btn btn-default">See More</a>
+          </div>
         </div>
     </div>
   </header>
