--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -49,10 +49,10 @@
   <header id="gradient" class="page page-intro">
     <div class="container-fluid">
         <div id="row">
-          <div class="col-md-12">
+          <div class="col-xs-12 col-md-12">
             <div id="intro-title">Daniel Ho</div><br>
-            <div id="intro-heading">Welcome to my Personal Website!</div><br>
-            <a href="#page-about" class="page-scroll btn btn-default">See More</a>
+            <div id="intro-text">Welcome to my Personal Website!</div><br>
+            <a id="intro-btn" href="#page-about" class="page-scroll btn btn-default">See More</a>
           </div>
         </div>
     </div>
