--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -88,6 +88,76 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 col-sm-6 card-item">
+          <a class="card-link" href="https://donutdaniel.github.io/F16/magoose_game/">
+            <div class="card-hover">
+              <div class="card-hover-content">
+                <i class="fa fa-angle-up fa-2x"></i>
+                <h3>Magoose Game</h3>
+              </div>
+            </div>
+            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 card-item">
+          <a class="card-link" href="https://github.com/donutdaniel/Clock">
+            <div class="card-hover">
+              <div class="card-hover-content">
+                <i class="fa fa-angle-up fa-2x"></i>
+                <h3>Alarm Clock</h3>
+              </div>
+            </div>
+            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 card-item">
+          <a class="card-link" href="https://donutdaniel.github.io/S16/dodge_or_die">
+            <div class="card-hover">
+              <div class="card-hover-content">
+                <i class="fa fa-angle-up fa-2x"></i>
+                <h3>Dodge or Die</h3>
+              </div>
+            </div>
+            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 card-item">
+          <a class="card-link" href="https://donutdaniel.github.io/ee/fusor">
+            <div class="card-hover">
+              <div class="card-hover-content">
+                <i class="fa fa-angle-up fa-2x"></i>
+                <h3>Fusor</h3>
+              </div>
+            </div>
+            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 card-item">
+          <a class="card-link" href="https://donutdaniel.github.io/S16/collaborative_sketch">
+            <div class="card-hover">
+              <div class="card-hover-content">
+                <i class="fa fa-angle-up fa-2x"></i>
+                <h3>SketchPad</h3>
+              </div>
+            </div>
+            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 card-item">
+          <a class="card-link" href="https://donutdaniel.github.io/Amazon">
+            <div class="card-hover">
+              <div class="card-hover-content">
+                <i class="fa fa-angle-up fa-2x"></i>
+                <h3>Amazon</h3>
+              </div>
+            </div>
+            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+          </a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Section 3: Contact -->
