--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -158,6 +158,13 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+        <a id="projects-btn" class="btn btn-default">More Projects</a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Section 3: Contact -->
