--- a/misc/portfolio_test/index.html
+++ b/misc/portfolio_test/index.html
@@ -98,7 +98,7 @@
                 <h3>Magoose Game</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/magoose.jpg" alt="Card Image">
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
@@ -109,7 +109,7 @@
                 <h3>Alarm Clock</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/clock.jpg" alt="Card Image">
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
@@ -120,7 +120,7 @@
                 <h3>Dodge or Die</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/dodge_or_die.jpg" alt="Card Image">
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
@@ -131,7 +131,7 @@
                 <h3>Fusor</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/fusor.jpg" alt="Card Image">
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
@@ -142,7 +142,7 @@
                 <h3>SketchPad</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/sketchpad.jpg" alt="Card Image">
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
@@ -153,7 +153,7 @@
                 <h3>Amazon</h3>
               </div>
             </div>
-            <img class="img-responsive" src="images/sf.jpg" alt="Card Image">
+            <img class="img-responsive" src="images/projects/amazon.jpg" alt="Card Image">
           </a>
         </div>
       </div>
@@ -161,7 +161,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-xs-12">
-        <a id="projects-btn" class="btn btn-default">More Projects</a>
+        <a id="projects-btn" class="btn btn-default" href="https://donutdaniel/misc/projects">More Projects</a>
         </div>
       </div>
     </div>
@@ -173,6 +173,10 @@
       <div class="row">
         <div class="col-md-12">
           <h1 class="section-header">Contact</h1>
+          <p>in the works</p>
+          <a href="https://github.com/donutdaniel">Github</a><br>
+          <a href="https://www.linkedin.com/in/danielho54/">LinkedIn</a><br>
+          <a href="mailto:danielho54@gmail.com">danielho54@gmail.com</a>
         </div>
       </div>
     </div>
