--- a/index.html
+++ b/index.html
@@ -168,19 +168,43 @@
   </section>
 
   <!-- Section 3: Contact -->
-  <section id="page-contact" class="page">
+  <section id="page-contact">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
           <h1 class="section-header">Contact</h1>
-          <p>in the works</p>
-          <a href="https://github.com/donutdaniel">Github</a><br>
-          <a href="https://www.linkedin.com/in/danielho54/">LinkedIn</a><br>
-          <a href="mailto:danielho54@gmail.com">danielho54@gmail.com</a>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <p id="contact-text">Email me!</p>
+          <a href="mailto:danielho54@gmail.com"><i class="fa fa-envelope-o fa-4x"></i></a><br><br>
+          <p>danielho54@gmail.com</p>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container-fluid text-center">
+      <div class="row social-row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+          <ul class="list-inline">
+            <li><a href="https://www.facebook.com/danielho54" class="btn btn-social"><i class="fa fa-facebook fa-2x"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/danielho54/" class="btn btn-social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://github.com/donutdaniel" class="btn btn-social"><i class="fa fa-github fa-2x"></i></a></li>
+            <li><a href="https://codepen.io/donutdaniel/" class="btn btn-social"><i class="fa fa-codepen fa-2x"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row" id="footnotes">
+        <p><i class="fa fa-copyright"></i> 2017 Daniel Ho</p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
