fonts look nice

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img id="profile-picture" class="circular" src="images/profile.jpg"/>
         </div>
         <div class="col-md-6">
-          <h2 id="about-caption text-center">Hi! I like to code, build things, and make friends.</h2><br>
+          <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br>
           <p id="about-text" class="text-left">My name is Daniel and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">Unviersity of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. While I am available and searching for work this summer, I continue to expand my area of expertise by delving into new technologies as well as honing familiar ones.</p><br>
         </div>
       </div>
@@ -181,7 +181,7 @@
         <div class="col-lg-12 col-md-12">
           <p id="contact-text">Email me!</p>
           <a href="mailto:danielho54@gmail.com"><i class="fa fa-envelope-o fa-4x"></i></a><br><br>
-          <p>danielho54@gmail.com</p>
+          <p id="email-text">danielho54@gmail.com</p>
         </div>
       </div>
     </div>
