--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <script src="js/gradient.js"></script>
 </head>
 
@@ -29,7 +30,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-id">
           <span class="sr-only">Toggle Navigation</span><i class="fa fa-bars fa-lg"></i>
         </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Daniel Ho</a>
+        <a class="navbar-brand page-scroll" href="#page-top"><div class="list-inline"><img id="logo" src="images/favicon.png">Daniel Ho</div></a>
       </div>
 
       <!-- Buttons for Scrolling -->
