--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <p id="contact-text">Email me!</p>
-          <a href="mailto:danielho54@gmail.com"><i class="fa fa-envelope-o fa-4x"></i></a><br><br>
-          <p id="email-text">danielho54@gmail.com</p>
+          <a href="mailto:danielho54@gmail.com"><i class="fa fa-envelope-o fa-4x"></i></a>
+          <a href="mailto:danielho54@gmail.com"><p id="email-text">danielho54@gmail.com</p></a>
         </div>
       </div>
     </div>
