--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="col-md-6">
           <h2 id="about-caption" class="text-center">Hi! I like to code, build things, and make friends.</h2><br>
-          <p id="about-text" class="text-left">My name is Daniel and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">Unviersity of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. While I am available and searching for work this summer, I continue to expand my area of expertise by delving into new technologies as well as honing familiar ones.</p><br>
+          <p id="about-text" class="text-left">My name is Daniel and I am currently a sophomore studying Computer Science and Engineering at the <a href="http://www.usc.edu/">University of Southern California</a>. I develop software and hardware with a passion and aspire to create with meaningful and impactful results.<br><br>I'm always looking forward to learning more through challenging myself with projects and work outside of school. While I am available and searching for work this summer, I continue to expand my area of expertise by delving into new technologies as well as further developing proficient ones.</p><br>
         </div>
       </div>
     </div>
