--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.png">
+
+  <!-- Preloading scripts to be used -->
   <script src="js/gradient.js"></script>
+  <script src="js/processing.js"></script>
 </head>
 
 <!-- data-spy and data-target for Bootstrap scrollspy -->
@@ -46,9 +49,10 @@
   </nav>
 
   <!-- Intro Page -->
-  <header id="gradient" class="page page-intro">
+  <div id="particles-js"></div>
+  <header id="page-intro" class="page">
     <div class="container-fluid">
-        <div id="row">
+        <div class="row">
           <div class="col-xs-12 col-md-12">
             <div id="intro-title">Daniel Ho</div><br>
             <div id="intro-text">Welcome to my Personal Website!</div><br>
@@ -57,6 +61,7 @@
         </div>
     </div>
   </header>
+
 
   <!-- Section 1: About -->
   <section id="page-about" class="page">
@@ -220,7 +225,9 @@
   crossorigin="anonymous"></script>
   <!-- jQuery Easing -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <!-- Particle.js -->
+  <script src="js/particles.js"></script>
   <!-- Custom JS -->
-  <script src="js/main.js"></script>
   <script src="js/nav_scroll.js"></script>
+  <script src="js/main.js"></script>
 </html>
