--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="container-fluid">
         <div class="row">
           <div class="col-xs-12 col-md-12">
-            <div id="intro-title">Daniel Ho</div><br>
-            <div id="intro-text">Welcome to my Personal Website!</div><br>
+            <div id="intro-title">Daniel Ho</div>
+            <div id="intro-text">Welcome to my Personal Website!</div>
             <a id="intro-btn" href="#page-about" class="page-scroll btn btn-default">See More</a>
           </div>
         </div>
