--- a/index.html
+++ b/index.html
@@ -227,6 +227,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   <!-- Particle.js -->
   <script src="js/particles.js"></script>
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-99580859-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
   <!-- Custom JS -->
   <script src="js/nav_scroll.js"></script>
   <script src="js/main.js"></script>
