--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" href="https://donutdaniel.github.io/projects/fall16/magoose_game/">
+          <a class="card-link" data-toggle="modal" data-target="#modal1">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -108,7 +108,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" href="https://github.com/donutdaniel/Clock"><!-- modal -->
+          <a class="card-link" data-toggle="modal" data-target="#modal2">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -119,7 +119,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" href="https://donutdaniel.github.io/projects/summer16/dodge_or_die">
+          <a class="card-link" data-toggle="modal" data-target="#modal3">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -130,7 +130,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" href="https://donutdaniel.github.io/projects/ee/fusor"><!-- modal -->
+          <a class="card-link" data-toggle="modal" data-target="#modal4">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -141,7 +141,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" href="https://donutdaniel.github.io/projects/summer16/collaborative_sketch">
+          <a class="card-link" data-toggle="modal" data-target="#modal5">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -152,7 +152,7 @@
           </a>
         </div>
         <div class="col-md-4 col-sm-6 card-item">
-          <a class="card-link" href="https://donutdaniel.github.io/projects/Amazon"><!-- modal -->
+          <a class="card-link" data-toggle="modal" data-target="#modal6">
             <div class="card-hover">
               <div class="card-hover-content">
                 <i class="fa fa-angle-up fa-2x"></i>
@@ -212,8 +212,282 @@
     </div>
   </footer>
 
-</body>
+<!-- Modals for Projects -->
 
+<!-- Modal1: Magoose -->
+<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Magoose Game</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Carousel -->
+        <div id="modal1-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/projects/magoose.jpg" alt="magoose1">
+            </div>
+            <div class="item">
+              <img src="images/projects/magoose2.jpg" alt="magoose2">
+            </div>
+          </div>
+          <!-- Carousel Controls-->
+          <a class="left carousel-control" href="#modal1-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#modal1-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-body-text text-center">
+          <p>Text Here</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-center">
+          <a href="https://donutdaniel.github.io/projects/fall16/magoose_game/" class="btn btn-primary modal-btn">Demo</a>
+          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/fall16/magoose_game" class="btn btn-primary modal-btn">Code</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal2: Alarm Clock -->
+<div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Alarm Clock</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Carousel -->
+        <div id="modal2-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/projects/clock.jpg" alt="clock1">
+            </div>
+            <div class="item">
+              <img src="images/projects/clock2.jpg" alt="clock2">
+            </div>
+          </div>
+          <!-- Carousel Controls-->
+          <a class="left carousel-control" href="#modal2-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#modal2-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-body-text text-center">
+          <p>Text Here</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-center">
+          <a href="https://github.com/donutdaniel/clock" class="btn btn-primary modal-btn">Code</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal3: Dodge or Die -->
+<div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Dodge or Die</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Carousel -->
+        <div id="modal3-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/projects/dodge_or_die.jpg" alt="dodge1">
+            </div>
+            <div class="item">
+              <img src="images/projects/dodge_or_die2.jpg" alt="dodge2">
+            </div>
+          </div>
+          <!-- Carousel Controls-->
+          <a class="left carousel-control" href="#modal3-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#modal3-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-body-text text-center">
+          <p>Text Here</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-center">
+          <a href="https://donutdaniel.github.io/projects/summer16/dodge_or_die/" class="btn btn-primary modal-btn">Demo</a>
+          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/dodge_or_die" class="btn btn-primary modal-btn">Code</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal4: Fusor -->
+<div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Fusor</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Carousel -->
+        <div id="modal4-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/projects/fusor.jpg" alt="fusor1">
+            </div>
+            <div class="item">
+              <img src="images/projects/fusor2.jpg" alt="fusor2">
+            </div>
+          </div>
+          <!-- Carousel Controls-->
+          <a class="left carousel-control" href="#modal4-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#modal4-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-body-text text-center">
+          <p>Text Here</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-center">
+          <a href="https://donutdaniel.github.io/downloads/fusor.mp3" class="btn btn-primary modal-btn">Video</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal5: SketchPad -->
+<div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">SketchPad</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Carousel -->
+        <div id="modal5-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/projects/sketchpad.jpg" alt="sketchpad1">
+            </div>
+            <div class="item">
+              <img src="images/projects/sketchpad2.jpg" alt="sketchpad2">
+            </div>
+          </div>
+          <!-- Carousel Controls-->
+          <a class="left carousel-control" href="#modal5-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#modal5-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-body-text text-center">
+          <p>Text Here</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-center">
+          <a href="https://donutdaniel.github.io/projects/summer16/sketchpad/" class="btn btn-primary modal-btn">Demo</a>
+          <a href="https://github.com/donutdaniel/donutdaniel.github.io/tree/master/projects/summer16/sketchpad" class="btn btn-primary modal-btn">Code</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal6: Amazon -->
+<div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Amazon</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- Carousel -->
+        <div id="modal6-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/projects/amazon.jpg" alt="amazon1">
+            </div>
+            <div class="item">
+              <img src="images/projects/amazon2.jpg" alt="amazon2">
+            </div>
+          </div>
+          <!-- Carousel Controls-->
+          <a class="left carousel-control" href="#modal6-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#modal6-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="modal-body-text text-center">
+          <p>Text Here</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-center">
+          <a href="https://donutdaniel.github.io/downloads/amazon" class="btn btn-primary modal-btn">Executable</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</body>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
